my task finished

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <div class="left-part"></div>
                 </div>
             </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ea, voluptates incidunt mollitia modi commodi reprehenderit explicabo quidem fuga repellat, blanditiis maiores soluta, reiciendis officia repellendus dignissimos nobis nam. Facere?
+            </p>
         </header>
     </main>
 </body>
